Update dyno wake up task